--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,7 @@
 --green-color:#7ACC2D;
 --white-color:white;
 --black-color:#313337;
+--green-light: #55FF00;
 /* Tipografiao */
 --normal:var(--normal);
 /* Espaciado */
@@ -52,7 +53,7 @@ nav li a:hover{
 /* --------------------------- Main Section */
 
 .main_section{
-    padding: 15px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -69,7 +70,7 @@ nav li a:hover{
 }
 
 .products{
-    padding: 100px;
+    padding: 50px;
     margin-top: -0px;
 }
 .products .content{
@@ -77,12 +78,12 @@ nav li a:hover{
     padding: 15px;
     box-shadow: var(--box);
 }
-.img_content{
+.img-product{
     text-align: center;
 }
 
 .main_button{
-    background-color:var(--black-color);
+    background-color:var(--green-color);
     width: 100%;
     padding: var(--space);
     font-size: 17px;
@@ -93,7 +94,7 @@ nav li a:hover{
 }
 
 .main_button:hover{
-    background-color:var(--green-color);
+    background-color:var(--green-light);
 }
 
 /* --------------------------- Caracteristicas */
@@ -158,6 +159,7 @@ nav li a:hover{
 .container-footer{
     display: flex;
     justify-content: space-between;
+    padding: 0px 20px;
 }
 
 .container-ft{
